--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,6 @@ android {
     compileSdkVersion 29
 
     defaultConfig {
-//        applicationId "com.my.amazing.demoapp"
         applicationId "com.my.awesome.demoapp"
         minSdkVersion 16
         targetSdkVersion 29
@@ -49,7 +48,8 @@ dependencies {
     implementation 'com.google.android.gms:play-services-ads-identifier:17.0.1'
     implementation 'com.android.support:multidex:1.0.3'
 
-//   implementation 'com.applovin.mediation:amazon-adapter:+'
+    // we don't have mediated ad network called "amazon"
+//    implementation 'com.applovin.mediation:amazon-adapter:+'
     implementation 'com.applovin.mediation:mytarget-adapter:+'
 
 }
